misc-4 (#203)
* fix npe when no member found

* V4 of checkout

* log publish as info

* fix bad bug whereby pending blocks would be removed before fully certified.

Yi

Fix Test subjects in lifecycle tests to not generate genesis.

* use iteration count, rather than relying on currentIndex to advance

* correct iteration count :)

* periodically emit last block produced if no pre no preBlock published

* squelch publishing logging on Producer end

* force beacon publishing

* beacon only emitted based on empty preblock count

* reduce beacon publishing logging

* reduce beacon publishing logging

* cleanup deps, update grpc/proto

* better smoke testing

* better smoke testing

* use vthread exec for smoke

* default repos

* run on mac M1?

* nope

* salesforce-Ubuntu

* revert

* config tweaking